@@ -223,6 +223,7 @@ class TestDocumentWithTemplateFormWithDocProperties(IntegrationTestCase):
             'ogg.document.sequence_number': '40',
             'ogg.document.title': 'Test Docx',
             'ogg.document.version_number': 0,
+            'ogg.dossier.external_reference': u'qpr-900-9001-\xf7',
             'ogg.dossier.reference_number': 'Client1 1.1 / 1',
             'ogg.dossier.sequence_number': '1',
             'ogg.dossier.title': u'Vertr\xe4ge mit der kantonalen Finanzverwaltung',
@@ -281,6 +282,7 @@ class TestDocumentWithTemplateFormWithDocProperties(IntegrationTestCase):
             'ogg.document.sequence_number': '40',
             'ogg.document.title': 'Test Docx',
             'ogg.document.version_number': 0,
+            'ogg.dossier.external_reference': u'qpr-900-9001-\xf7',
             'ogg.dossier.reference_number': 'Client1 1.1 / 1',
             'ogg.dossier.sequence_number': '1',
             'ogg.dossier.title': u'Vertr\xe4ge mit der kantonalen Finanzverwaltung',
