@@ -14,6 +14,7 @@ Changelog
 - return fullname of responsible in dossier GET. [njohner]
 - Revoke temporary roles also when closing direct-execution tasks. [phgross]
 - Add the GUI for task-reminders. [elioschmutz]
+- Add new docproperty ogg.dossier.external_reference. [njohner]
 - Exclude searchroots from subdossier listings. [Rotonen, lgraf]
 - Add filters (active and all) to membership listing. [njohner]
 - Do not add a task-reminder activity if task is finished. [elioschmutz]
